<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="theme_is_black" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="write_to_support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="link_for_sharing" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email" translatable="false">tasha.toloka@yandex.ru</string>
    <string name="support_email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="night_theme_is_on" translatable="false">Включение ночной темы</string>
    <string name="night_theme_warning" translatable="false">Для включения ночной темы в приложении, включите ночной режим на устройстве</string>
    <string name="back" translatable="false">Назад</string>
    <string name="track_name" translatable="false">Название трека</string>
    <string name="group" translatable="false">группа</string>
    <string name="time" translatable="false">время</string>
    <string name="not_found" translatable="false">Ничего не нашлось</string>
    <string name="something_went_wrong" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="new_connect" translatable="false">Обновить</string>
    <string name="you_was_searching" translatable="false">Вы искали</string>
    <string name="clean_history" translatable="false">Очистить историю</string>
    <string name="country" translatable="false">Страна</string>
    <string name="country_name" translatable="false">Великобритания</string>
    <string name="type" translatable="false">Жанр</string>
    <string name="rock" translatable="false">Rock</string>
    <string name="year" translatable="false">Год</string>
    <string name="year_count" translatable="false">1965</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="album_name" translatable="false">Yesterday (Remastered 2009)</string>
    <string name="timeline" translatable="false">Длительность</string>
    <string name="timeline_count" translatable="false">5:35</string>
    <string name="time_counter" translatable="false">0:30</string>



</resources>