<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MainScreenStyle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/LogoTextStyle"/>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/super_space"
        style="@style/MainScreenButtonLayer">

        <Button
            android:id="@+id/big_button_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:icon="@drawable/icon_search_light_mode"
            android:text="@string/search"
            style="@style/ButtonUnelevatedStyle">
        </Button>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/super_space"
        style="@style/MainScreenButtonLayer">

        <Button
            android:id="@+id/big_button_media"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:icon="@drawable/icon_media_light_mode"
            android:text="@string/media"
            style="@style/ButtonUnelevatedStyle">
        </Button>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/super_space"
        style="@style/MainScreenButtonLayer">

        <Button
            android:id="@+id/big_button_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:icon="@drawable/icon_settings_light_mode"
            android:text="@string/settings"
            style="@style/ButtonUnelevatedStyle">
        </Button>
    </LinearLayout>

</LinearLayout>