<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PleerActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/super_space" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/super_space" />

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/space"
        android:background="@null"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_new" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="56dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/placeholder"
        android:layout_width="@dimen/nothing"
        android:layout_height="@dimen/nothing"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/space"
        android:layout_marginTop="@dimen/medium_space_plus_1_x2"
        android:layout_marginBottom="@dimen/space_x3"
        android:radius="@dimen/space"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/pleer_track"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/menu_button"
        tools:src="@drawable/placeholder_main2" />

    <TextView
        android:id="@+id/pleer_info_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space"
        android:maxLines="1"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        style="@style/PleerInfoLeft"
        />

    <TextView
        android:id="@+id/pleer_info_country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space"
        android:maxLines="1"
        android:text="@string/country_name"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        style="@style/PleerInfoRight"/>


    <TextView
        android:id="@+id/pleer_info_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:maxLines="1"
        android:text="@string/type"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        style="@style/PleerInfoLeft"/>

    <TextView
        android:id="@+id/pleer_info_rock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:maxLines="1"
        android:text="@string/rock"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        style="@style/PleerInfoRight"/>


    <TextView
        android:id="@+id/pleer_info_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:maxLines="1"
        android:text="@string/year"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        style="@style/PleerInfoLeft"/>

    <TextView
        android:id="@+id/pleer_info_year_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:maxLines="1"
        android:text="@string/year_count"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        style="@style/PleerInfoRight"/>


    <TextView
        android:id="@+id/pleer_info_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:maxLines="1"
        android:text="@string/album"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        style="@style/PleerInfoLeft"/>

    <TextView
        android:id="@+id/pleer_info_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:maxLines="1"
        android:text="@string/album_name"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        style="@style/PleerInfoRight"/>

    <TextView
        android:id="@+id/pleer_info_timeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:maxLines="1"
        android:text="@string/timeline"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        style="@style/PleerInfoLeft"/>

    <TextView
        android:id="@+id/pleer_info_timeline_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:maxLines="1"
        android:text="@string/timeline_count"
        app:layout_constraintBottom_toBottomOf="@+id/h_bottom"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline"
        style="@style/PleerInfoRight"/>

    <TextView
        android:id="@+id/pleer_info_time_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ys_display"
        android:maxLines="1"
        android:text="@string/time_counter"
        android:textColor="#1A1B22"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/pleer_info_timeline_count"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />

    <ImageButton
        android:id="@+id/button_pleer_play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/half_space"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@id/pleer_info_time_counter"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:srcCompat="@drawable/button_pleer_play" />

    <ImageButton
        android:id="@+id/button_pleer_add"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="25dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@id/button_pleer_play"
        app:layout_constraintEnd_toStartOf="@id/button_pleer_play"
        app:srcCompat="@drawable/button_pleer_add" />

    <ImageButton
        android:id="@+id/button_pleer_like"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="@dimen/space_x3"
        android:layout_marginBottom="25dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@id/button_pleer_play"
        app:layout_constraintStart_toEndOf="@id/button_pleer_play"
        app:srcCompat="@drawable/button_pleer_like" />

    <TextView
        android:id="@+id/pleer_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/medium_space"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ys_display_m"
        android:maxLines="1"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_pleer_play"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="The Beatles" />

    <TextView
        android:id="@+id/pleer_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/space_x3"
        android:layout_marginBottom="@dimen/medium_space"
        android:fontFamily="@font/ys_display_m"
        android:maxLines="1"
        android:textColor="@color/text_color"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/pleer_group"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="Yesterday (Remastered 2009)" />


</androidx.constraintlayout.widget.ConstraintLayout>