<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trackMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/nothing"
    style="@style/TrackMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height"
        style="@style/TrackMenuList">

        <ImageView
            android:id="@+id/trackPicture"
            android:layout_width="@dimen/track_picture"
            android:layout_height="@dimen/track_picture"
            android:src="@drawable/image1"
            android:background="?attr/selectableItemBackgroundBorderless"
            style="@style/ImagePic"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/menu_height"
            style="@style/AboutTrack">

            <TextView
                android:id="@+id/sourceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_name"
                style="@style/TrackNameText"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/bandName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/group"
                    style="@style/BandNameText"
                    />

                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/icon_point"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    />

                <TextView
                    android:id="@+id/timeTrack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    style="@style/BandNameText"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/sourceImage"
            android:layout_width="@dimen/space_x3"
            android:layout_height="@dimen/space_x3"
            android:src="@drawable/icon_arrow_forward"
            android:background="?attr/selectableItemBackgroundBorderless"
            style="@style/ImagePic"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>